# LectureDoc

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: setup-ffmpeg.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: UpdateBanner.tsx
src/components/EditFrames/: FramePreviewPanel.tsx  index.tsx
src/components/Preferences/: index.tsx
src/components/Queue/: index.tsx
src/components/View/: FrameGallery.tsx  SearchPanel.tsx  SettingsPanel.tsx  index.tsx
src/lib/: autoOcr.ts  frameFilter.ts  frameLog.ts  ocr.ts  pdfBuilder.ts
src/store/: index.ts
src/types/: index.ts
